--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@types/uuid": "^8.3.4",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "connect-multiparty": "^2.2.0",
@@ -33,6 +34,7 @@
     "ngx-tinymce": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
