--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@maslick/aplouder": "^1.3.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@types/uuid": "^8.3.4",
     "bcrypt-nodejs": "^0.0.3",
