--- a/admin/package.json
+++ b/admin/package.json
@@ -26,7 +26,11 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "connect-multiparty": "^2.2.0",
+    "exceljs": "^4.3.0",
     "express": "^4.17.3",
+    "fecha": "^4.2.3",
+    "file-saver": "^2.0.5",
+    "file-server": "^2.2.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
@@ -42,6 +46,7 @@
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
