--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,10 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "connect-multiparty": "^2.2.0",
+    "cryptr": "^6.0.3",
+    "encrypt": "^0.0.1",
     "express": "^4.17.3",
+    "file-system": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
