--- a/tienda/package.json
+++ b/tienda/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
+    "@angular/common": "^14.1.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "~13.2.0",
