--- a/tienda/angular.json
+++ b/tienda/angular.json
@@ -102,5 +102,8 @@
       }
     }
   },
-  "defaultProject": "tienda"
+  "defaultProject": "tienda",
+  "cli": {
+    "analytics": "243ecc75-c835-4323-b1d7-38249b4412c7"
+  }
 }
