--- a/tienda/package.json
+++ b/tienda/package.json
@@ -19,14 +19,18 @@
     "@angular/platform-browser-dynamic": "~14.1.0",
     "@angular/router": "~14.1.0",
     "@auth0/angular-jwt": "^5.1.0",
-    "file-system": "^2.2.2",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "file-system": "^1.2.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "ngx-gallery-9": "^1.0.6",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.1.0",
+    "@angular-devkit/build-angular": "^14.2.10",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "~14.1.0",
     "@types/jasmine": "~3.10.0",
